--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
             const p = document.getElementById('pass').value;
             
             // CREDENCIALES DE ACCESO
-            if(u === "admin" && p === "ramal2025") {
+            if(u === "INPERIUM" && p === "SOMOSLOSMEJORES") {
                 window.location.href = "dashboard.html";
             } else {
                 alert("Usuario o contraseña incorrectos. Verifique sus credenciales.");
