--- a/index.html
+++ b/index.html
@@ -27,27 +27,28 @@
         <div class="logo">RAMAL<span>CERBERUS</span></div>
         <a href="login.html" class="btn-portal"><i class="fas fa-lock"></i> Acceso Admin</a>
     </nav>
-    <section class="hero"><h1>CONECTIVIDAD PROFESIONAL</h1></section>
+    <section class="hero"><h1>CONECTANDO EXPERIENCIAS</h1></section>
     <section class="planes">
-        <h2>Nuestros Planes</h2>
+        <h2>Nuestros Planes de Internet de Alta Velocidad</h2>
         <div class="grid-planes">
             <div class="plan-card">
-                <h3>PLAN HOGAR</h3>
-                <div class="price">150 <span>Bs</span></div>
-                <p>Internet Fibra Óptica</p>
-                <a href="https://wa.me/59172745754?text=Deseo%20el%20Plan%20Hogar" class="btn-ws"><i class="fab fa-whatsapp"></i> Solicitar por WhatsApp</a>
+                <h3>PLAN BASICO</h3>
+                <div class="price">119 <span>Bs</span></div>
+                <p>Internet Fibra Óptica Plan de 10 Mbps para 4 Dispositivos
+                </p>
+                <a href="https://wa.me/59172745754?text=Deseo%20el%20Plan%20Basico" class="btn-ws"><i class="fab fa-whatsapp"></i> Solicitalo por WhatsApp</a>
             </div>
             <div class="plan-card">
-                <h3>PLAN PRO</h3>
-                <div class="price">199 <span>Bs</span></div>
-                <p>Alta Velocidad Gaming</p>
-                <a href="https://wa.me/59172745754?text=Deseo%20el%20Plan%20Pro" class="btn-ws"><i class="fab fa-whatsapp"></i> Solicitar por WhatsApp</a>
+                <h3>PLAN HIGH SPEED</h3>
+                <div class="price">149 <span>Bs</span></div>
+                <p>Velocidad Gaming de Fibra Optica Plan de 15 Mbps para 6 a 7 Dispositivos</p>
+                <a href="https://wa.me/59172745754?text=Deseo%20el%20Plan%20High Speed" class="btn-ws"><i class="fab fa-whatsapp"></i> Solicitalo por WhatsApp</a>
             </div>
             <div class="plan-card" style="border-top-color: var(--oro);">
-                <h3>TV + INTERNET</h3>
+                <h3>TV + INTERNET ULTRA HIGH SPEED</h3>
                 <div class="price">220 <span>Bs</span></div>
-                <p>Fibra + TV RG6</p>
-                <a href="https://wa.me/59172745754?text=Deseo%20el%20Plan%20Duo" class="btn-ws"><i class="fab fa-whatsapp"></i> Solicitar por WhatsApp</a>
+                <p>Ultra Velocidad para todo tu Hogar que viene con TV Cable en COMBO</p>
+                <a href="https://wa.me/59172745754?text=Deseo%20el%20Plan%20TV + Ultra High Speed" class="btn-ws"><i class="fab fa-whatsapp"></i> Solicitalo por WhatsApp</a>
             </div>
         </div>
     </section>
